align local and icaas setup